Attempt to address missing fgcolor definition introduced in knitr 1.47.0

--- a/inst/resources/tex/Bioconductor.sty
+++ b/inst/resources/tex/Bioconductor.sty
@@ -14,7 +14,8 @@
 \ProcessOptions
 %
 \PassOptionsToPackage{usenames,dvipsnames}{color}
-\RequirePackage{color}
+\RequirePackage{xcolor}
+\definecolor{fgcolor}{rgb}{0.251, 0.251, 0.251}
 \definecolor{BiocBlue}{RGB}{24,129,194}
 \definecolor{BiocGreen}{RGB}{135,177,63}
 \definecolor{BiocGray}{cmyk}{0,0,0,0.50}
@@ -606,6 +607,11 @@
     \wlog{Patching longtable done!}
   }
 }{}
+%
+% New commands introduced in knitr 1.47.0
+% This over sets colors that match the original BiocStyle colors
+\newcommand{\hlsng}[1]{\textcolor[rgb]{0.251,0.627,0.251}{#1}}
+\newcommand{\hldef}[1]{\textcolor[rgb]{0.251,0.251,0.251}{#1}}
 %
 %
 \endinput
